--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Bazar da Naza</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
-    <body>
+    <body background="fotos/back.jpg">
         <div id="bannersup">
             <h1><center>Oh Senhor Jesus!</center></h1>
         </div>
@@ -100,9 +100,9 @@
                     <center>
                         &copy; Bazar da Naza
                         <div class="icons">
-                            <a href="https://www.facebook.com" target="blank"><img src="icones/facebook.png" alt="Icone Facebook"</a>
-                            <a href="https://www.twitter.com" target="blank"><img src="icones/instagram.png" alt="Icone Instagram"</a>
-                            <a href="https://www.twitter.com" target="blank"><img src="icones/twitter.png" alt="Icone Twitter"</a>
+                            <a href="https://www.facebook.com" target="blank"><img src="icones/facebook.png" alt="Icone Facebook"></a>
+                            <a href="https://www.twitter.com" target="blank"><img src="icones/instagram.png" alt="Icone Instagram"></a>
+                            <a href="https://www.twitter.com" target="blank"><img src="icones/twitter.png" alt="Icone Twitter"></a>
                         </div>
                     </center>
                 </div>
