--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
         <title>Bazar da Naza</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
-    <body background="fotos/back.jpg">
+    <body background="fotos/costura.jpg">
         <div id="bannersup">
-            <h1><center>Oh Senhor Jesus!</center></h1>
+            <div id="logo">
+                <center>
+                    <figure>
+                        <img src="fotos/bambina.png">
+                    </figure>
+                </center>
+            </div>
         </div>
         <div id="fotoroupa1">
             <figure>
@@ -98,7 +104,7 @@
             <div class="main">
                 <div class="social">
                     <center>
-                        &copy; Bazar da Naza
+                        &copy; Bazar Naza
                         <div class="icons">
                             <a href="https://www.facebook.com" target="blank"><img src="icones/facebook.png" alt="Icone Facebook"></a>
                             <a href="https://www.twitter.com" target="blank"><img src="icones/instagram.png" alt="Icone Instagram"></a>
