--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <div id="logo">
                 <center>
                     <figure>
-                        <img src="fotos/bambina.png">
+                        <img src="fotos/banner1.png">
                     </figure>
                 </center>
             </div>
@@ -104,7 +104,7 @@
             <div class="main">
                 <div class="social">
                     <center>
-                        &copy; Bazar Naza
+                        &copy; Bazar de Luxo
                         <div class="icons">
                             <a href="https://www.facebook.com" target="blank"><img src="icones/facebook.png" alt="Icone Facebook"></a>
                             <a href="https://www.twitter.com" target="blank"><img src="icones/instagram.png" alt="Icone Instagram"></a>
