--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="utf-8">
-        <title>Bazar da Naza</title>
+        <title>Bazar de Luxo</title>
         <link rel="stylesheet" type="text/css" href="css/estilos.css">
     </head>
     <body background="fotos/costura.jpg">
@@ -104,10 +104,11 @@
             <div class="main">
                 <div class="social">
                     <center>
-                        &copy; Bazar de Luxo
+                        <font color="purple">&copy;</font><b><font color="orange">B</font><font color="purple">a</font><font color="orange">z</font><font color="purple">a</font><font color="orange">r</font>
+                            <font color="purple">d</font><font color="orange">e </font><font color="purple">L<font color="orange">u</font><font color="purple">x</font><font color="orange">o</font></b>
                         <div class="icons">
                             <a href="https://www.facebook.com" target="_blank"><img src="icones/facebook.png" alt="Icone Facebook"></a>
-                            <a href="https://www.twitter.com" target="_blank"><img src="icones/instagram.png" alt="Icone Instagram"></a>
+                            <a href="https://www.instagram.com" target="_blank"><img src="icones/instagram.png" alt="Icone Instagram"></a>
                             <a href="https://www.twitter.com" target="_blank"><img src="icones/twitter.png" alt="Icone Twitter"></a>
                         </div>
                     </center>
@@ -115,7 +116,7 @@
             </div>
         </footer>
         <div id="alerta">
-             <h3>Gostou de alguma peça? 📞👉🏽</h3>   
+             <h3><font color="purple">Gostou de alguma peça? 📞👉🏽</font></h3>   
         </div>        
         <a href="https://api.whatsapp.com/send?phone=5586999964501&text=Olá!%20Gostaria%20de%20informações%20sobre%20as%20roupas."
             target="_blank" style="position:fixed;bottom:20px;right:30px;">
