--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=0.9"> 
         <title>Bazar de Luxo</title>
         <link rel="stylesheet" type="text/css" href="css/estilos.css">
     </head>
@@ -100,6 +101,11 @@
                 <img src="fotos/foto17.jpg" alt="camisa">
             </figure>
         </div>
+        <div id="fotoroupa18">
+            <figure>
+                <img src="fotos/foto18.jpg" alt="conjunto">
+            </figure>
+        </div>
         <footer>
             <div class="main">
                 <div class="social">
@@ -116,7 +122,9 @@
             </div>
         </footer>
         <div id="alerta">
-             <h3><font color="purple">Gostou de alguma peça? 📞👉🏽</font></h3>   
+             <h3><font color="orange">G</font><font color="purple">o</font><font color="orange">s</font><font color="purple">t</font><font color="orange">o</font><font color="purple">u</font>
+                 <font color="orange">d</font><font color="purple">e</font> <font color="orange">a</font><font color="purple">l</font><font color="orange">g</font><font color="purple">u</font><font color="orange">m</font><font color="purple">a</font>
+                 <font color="orange">p</font><font color="purple">e</font><font color="orange">ç</font><font color="purple">a</font><font color="orange">?</font>📞👉🏽</h3>   
         </div>        
         <a href="https://api.whatsapp.com/send?phone=5586999964501&text=Olá!%20Gostaria%20de%20informações%20sobre%20as%20roupas."
             target="_blank" style="position:fixed;bottom:20px;right:30px;">
